[tool.poetry]
name = "diagrams-as-code"
version = "0.1.0"
description = ""
authors = ["Joris Conijn <jorisconijn@binx.io>"]

[tool.poetry.dependencies]
python = "^3.9"
diagrams = "^0.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
